public/less/style.less
html {

	header {
		width: 100%;
		background: lightblue;

		nav a {
			margin-right: 10px;
			margin-left: 10px;
			color: white;
		}
	}
   
    body {
	  	font-family: "Arial", sans-serif;
		line-height: 1.5;
		width: 100%;
		text-align: center;
		background: aliceBlue;

		form {
			margin: 40px;

			input {
				border-radius: 3px;
			}
		}

		.tableau {
			border: 1px solid black;
			border-collapse: collapse;
			width: 70%;
			table-layout: fixed;
			word-wrap:break-word;
			margin: 0 auto;
			box-shadow: 3px 5px 5px 5px #888888;

			th {
				background: blue;
				border: 1px solid black;
				color: white;
				text-decoration:none;

				a {
					color:white;
				}
			}

			td {
				background: lightblue;
				border: 1px solid black;
			}
		}

		#chat {
			display: block;
			text-align: center;
			margin:0 auto;
		}

		#list_user {
			width: 100%;
			margin-bottom: 20px;
		}
	}

	footer {
		font-size:0.8em;
		text-align: center;
		margin-top: 40px;

		ul {
			list-style-type: none;
		}
	}
}

